src/test/ui/existential_types/generic_duplicate_lifetime_param.stderr
error: non-defining existential type use in defining scope
  --> $DIR/generic_duplicate_lifetime_param.rs:7:1
   |
LL | / fn one<'a>(t: &'a ()) -> Two<'a, 'a> {
LL | |     t
LL | | }
   | |_^
   |
note: lifetime used multiple times
  --> $DIR/generic_duplicate_lifetime_param.rs:5:22
   |
LL | existential type Two<'a, 'b>: std::fmt::Debug;
   |                      ^^  ^^

error: aborting due to previous error

