src/test/ui/existential_types/generic_duplicate_lifetime_param.rs
#![feature(existential_type)]

fn main() {}

existential type Two<'a, 'b>: std::fmt::Debug;

fn one<'a>(t: &'a ()) -> Two<'a, 'a> { //~ ERROR non-defining existential type use
    t
}
